# specless

./: PUBLISHING.md  README.md  build.sh  main.py  pyproject.toml  specless.rb  specless.spec
tests/: test_e2e.py
